# UAV-MCP

./: README.md  config.py  project_flowchart.md  pyproject.toml  requirements.txt  server.py
ai/: image_flight_planner.py  real_image_recognizer.py  replanner.py  translator.py  vision_recognizer.py
codegen/: dronekit_generator.py  generator.py
core/: command_parser.py  flight_planner.py  grid_space.py
missions/: simple_mission_dronekit.py  simple_mission_sim.py
tools/: layer_tools.py  layer_tools_optimized.py
visualization/: environment_visualizer.py  layer_visualizer.py  visualizer_3d.py
