[project]
name = "uav-mcp-server"
version = "1.0.0"
description = "无人机MCP控制服务器 - 自然语言控制、仿真可视化、代码生成"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
